Getting ready for Travis CI

--- a/machines/C/SConstruct
+++ b/machines/C/SConstruct
@@ -2,4 +2,4 @@ vars = Variables(None, ARGUMENTS)
 vars.Add(BoolVariable('DEBUG', 'Debug mode (1-enabled)', 0))
 env = Environment(variables = vars, CPPDEFINES={'DEBUG' : '${DEBUG}'})
 
-env.Program('bin/main', Glob('src/*.c'), CPPATH='./src')
+env.Program('bin/c_machine'+('_debug' if env['DEBUG'] else ''), Glob('src/*.c'), CPPATH='./src')
