--- a/machines/C/SConstruct
+++ b/machines/C/SConstruct
@@ -1,5 +1,5 @@
 vars = Variables(None, ARGUMENTS)
-vars.Add(BoolVariable('DEBUG', 'Debug mode (1-enabled)', 0))
+vars.Add('DEBUG', 'Debug mode (1-enabled)', 0)
 env = Environment(variables = vars, CPPDEFINES={'DEBUG' : '${DEBUG}'})
 
-env.Program('bin/c_machine'+('_debug' if env['DEBUG'] else ''), Glob('src/*.c'), CPPATH='./src')
+env.Program('bin/c_machine'+('_debug' if env['DEBUG'] == '1' else ''), Glob('src/*.c'), CPPATH='./src')
