--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 before_script:
   - export DEBUG_SUFFIX=
   - if [ "$DEBUG_MODE" = "1" ]; then export DEBUG_SUFFIX=_debug; fi
-script: 
+script:
   - scons DEBUG=$DEBUG_MODE
   - ./machines/Cpp/bin/c_machine$DEBUG_SUFFIX
-  - python scripts/testsuite/test_programs.py
+  - python scripts/testsuite/test_programs.py DEBUG=$DEBUG_MODE
